hyphenate key words

--- a/config.yaml
+++ b/config.yaml
@@ -24,7 +24,7 @@ title: "Translational Omics in Alzheimers Disease"
 created: 2024-10-02
 
 # Comma-separated list of keywords for the lesson
-keywords: "Alzheimers Disease, Cross-species translation, omics, AD Knowledge Portal"
+keywords: "Alzheimers-disease, cross-species-translation, omics, AD-Knowledge-Portal"
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
